--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title : egrfoe Blog -)
 
 author :
-    name : lei
+    name : shinichr
     email : shinichi285264595@gmail.com
     github : shinichr
 
