--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ links:
   - name:         About
     url:          /about
   - name:         Blog
-    url:          http://ShinichR.me
+    url:          http://shinichr.github.io/
     external:     true
   - name:         Email
     url:          mailto:shinich285264595@gmail.com
