--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ disqus_shortname: # disqus comment thread for post header options. ( leave blank
 facebook_appid:   # appid for like button, remove from /_includes/share.html if unwanted.
 google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
 
+
 links:
   - name:         About
     url:          /about
@@ -21,6 +22,10 @@ links:
 highlighter:      pygments
 permalink:        pretty
 markdown:         redcarpet
+
+paginate: 5
+paginate_path: "page:num"
+
 redcarpet:
   extensions:
     - smart
